--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://cdn.tailwindcss.com"></script>
-<title>Smart ATS AI</title>
+    <meta charset="UTF-8">
+    <title>Smart ATS AI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body class="bg-gray-100">
 
-<nav class="bg-blue-700 text-white p-4 flex justify-between">
-  <h1 class="font-bold">Smart ATS AI</h1>
-  <span>{{ request.user.username }}</span>
-</nav>
+<div class="min-h-screen flex flex-col">
 
-<div class="max-w-7xl mx-auto p-6">
-  {% block content %}{% endblock %}
+    <!-- NAVBAR -->
+    <nav class="bg-[#080808] text-white px-8 py-4 flex justify-between items-center">
+        <a href="/" class="text-xl font-bold">Smart ATS & career Co-Pilot</a>
+
+        {% if user.is_authenticated %}
+        <div class="space-x-6 text-sm flex items-center">
+            <a href="{% url 'upload_resume' %}" class="hover:text-gray-300">Upload</a>
+            <a href="{% url 'dashboard' %}" class="hover:text-gray-300">Dashboard</a>
+            <a href="{% url 'delete_account' %}" class="text-red-400 hover:text-red-300">Delete Account</a>
+            <span class="opacity-70">|</span>
+            <span class="font-semibold">{{ user.username }}</span>
+            <a href="{% url 'logout' %}" class="hover:text-gray-300">Logout</a>
+        </div>
+        {% endif %}
+    </nav>
+
+    <!-- PAGE CONTENT -->
+    <main class="flex-grow">
+        {% block content %}{% endblock %}
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="bg-black text-gray-400 text-sm py-2 mt-auto">
+    <div class="max-w-6xl mx-auto flex items-center justify-between px-6">
+
+        <p>© 2025 <b class="text-white">Shailesh Patil</b>. All rights reserved.</p>
+
+        <div class="flex gap-5 text-lg">
+            <a href="https://github.com/shaileshpatil97" target="_blank" class="hover:text-white">
+                <i class="fab fa-github"></i>
+            </a>
+
+            <a href="https://linkedin.com/in/shaileshpatil97" target="_blank" class="hover:text-white">
+                <i class="fab fa-linkedin"></i>
+            </a>
+
+            <a href="mailto:shaileshpatil9763@gmail.com" class="hover:text-white">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </div>
+    </div>
+</footer>
+
+
+
 </div>
 
 </body>
